@@ -21,16 +21,17 @@
         <!--        <version.eclipse.microprofile.graphql-client>2.1-SNAPSHOT</version.eclipse.microprofile.graphql-client>-->
         <version.eclipse.microprofile.metrics>4.0.1</version.eclipse.microprofile.metrics>
         <version.eclipse.microprofile.context-propagation>1.3</version.eclipse.microprofile.context-propagation>
+        <version.org.jboss.jandex>2.4.3.Final</version.org.jboss.jandex> <!-- won't be needed with SmallRye Parent v36 -->
         <version.smallrye-config>3.0.0-RC2</version.smallrye-config>
         <version.smallrye.metrics>4.0.0-RC1</version.smallrye.metrics>
         <version.smallrye-common>2.0.0-RC2</version.smallrye-common>
-        <version.smallrye-mutiny>1.4.0</version.smallrye-mutiny>
+        <version.smallrye-mutiny>1.7.0</version.smallrye-mutiny>
         <version.smallrye-context-propagation>2.0.0-RC1</version.smallrye-context-propagation>
-        <version.smallrye-stork>1.1.0</version.smallrye-stork>
+        <version.smallrye-stork>1.1.2</version.smallrye-stork>
         <version.opentracing>0.33.0</version.opentracing>
         <version.yasson>2.0.4</version.yasson>
         <version.jakarta-validation>3.0.2</version.jakarta-validation>
-        <version.jakarta-annotation>2.1.0</version.jakarta-annotation>
+        <version.jakarta-annotation>2.1.1</version.jakarta-annotation>
         <version.jakarta.servlet>5.0.0</version.jakarta.servlet>
         <version.jakarta.websocket>2.0.0</version.jakarta.websocket>
         
@@ -39,16 +40,16 @@
         <version.vertx>4.3.1</version.vertx>
 
         <!-- Test -->
-        <version.arquillian.jetty>1.0.0.CR4</version.arquillian.jetty>
-        <version.jetty>11.0.9</version.jetty>
+        <version.arquillian.jetty>1.0.0.Final</version.arquillian.jetty>
+        <version.jetty>11.0.11</version.jetty>
         <version.smallrye-opentracing>3.0.0-RC1</version.smallrye-opentracing>
         <version.hibernate-validator>8.0.0.Alpha3</version.hibernate-validator>
         <version.glasfish-el>4.0.2</version.glasfish-el>
-        <version.weld-junit5>4.0.0.CR1</version.weld-junit5>
+        <version.weld-junit5>4.0.0.Final</version.weld-junit5>
         <version.rxjava>2.2.21</version.rxjava>
         <version.jackson>2.13.3</version.jackson>
-        <version.mongo-bson>4.6.0</version.mongo-bson>
-        <version.mockito>4.5.1</version.mockito>
+        <version.mongo-bson>4.7.1</version.mongo-bson>
+        <version.mockito>4.6.1</version.mockito>
         
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tck/target/site/jacoco-aggregate/jacoco.xml,${project.basedir}/../tck/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         
@@ -85,7 +86,6 @@
         <module>server</module>
         <module>client</module>
         <module>tools</module>
-        <module>power-annotations</module>
         <module>docs</module>
     </modules>
     
@@ -487,13 +487,6 @@
             <modules>
                 <module>server/integration-tests-jdk16</module>
             </modules>
-            <properties>
-                <!-- FIXME: hack to allow powerannotations TCK to pass on JDK 16 -->
-                <powerannotations.tck.argLine>--add-opens java.base/java.util=ALL-UNNAMED</powerannotations.tck.argLine>
-                <!-- FIXME: find out why Gradle build doesn't work on JDK 16 in GH actions,
-                but seems to work locally -->
-                <skip.gradle.build>true</skip.gradle.build>
-            </properties>
         </profile>
 
         <profile>
